[package]
name = "mbus"
version = "0.1.0"
edition = "2018"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
description = "A `no_std` library for parsing M-Bus telegrams."
documentation = "https://docs.rs/mbus"
repository = "https://github.com/reitermarkus/mbus-rs"
homepage = "https://github.com/reitermarkus/mbus-rs"

[dependencies]
nom = "7.0"

[features]
default = ["std"]
std = []
